# AI-ML

./: README (1).md  README.md
Claude-Replica/: .env.example  app.py  claude_conversations.db  config.py  database.py  main.py  pyproject.toml
CrewAI/: my_first_crew.py
LangChain/: app.py  chains.py  prompt.py
LangFuse Testing/: test_langfuse.py
LangGraph/: Human-In-The-Loop.py  Parallel_Execution.py  Streaming_Code.py  Streaming_Graph_LLM.py  checkpointing.py  decision_making.py  langgraph_basic.py  loops_langgraph.py  memory.json  react_tool_calling.py  tool_calling_agent.py
Langchain/: pyproject.toml
Langchain-Pratik/: README.md
Langchain/Phase1/: 1LLM_Wrapper.py  4output_parser.py  CallBackHandler.py  Capstone_Chatbot.py  LCEL.py  LLM_Wrapper.py  Prompt_Template.py  Prompt_Template_Types.py  memory_types.py
Langchain/Phase2/: 1Document Loaders.py  2TextSplitter.py  3Embeddings  4VectorStores.py  5Retrievers.py
Langchain/Phase2/chroma_db/: chroma.sqlite3
Langchain/Phase2/faiss_index/: index.faiss  index.pkl
Langchain/Phase3/: 1BasicRagChain.py  2ConversationalRAG.py  3AdvancedRAG.py  4HybridSearch.py  5RAGEvaluation.py
Langchain/Phase4/: 1Tool Definition & Binding.py  2ReActAgent.py  3CustomTools.py  4AgentExecutor.py  5StructuredAgents.py
Langfuse/: LangGraph_Complete_Documentation.docx  check_Filters.py  check_with_any_ai.py  debugging_langfuse.py
LlamaIndex-Sumith's/: settings.py
Mini Projects/: README.md
Mini-Ai-Agent-Project/: Agent_Collaboration.py  ManagerAgent.py  Multi-Agent System.py  memory_ai.py  portfolio-level project.py  searchTool.py  toolAgentcalCalulator.py
Mini-Ai-Agent-Projects/: Dynamic_Ai_Agent.py  Final_Project_Advanced.py  Intent_Detection_Math.py  smart_assistant.py
Mini-Ai-Agent-Projects/HUMAN IN THE LOOP/: approve_payment.py  check_status.py  pyproject.toml  submit_payment.py
langfuse-demo/: test_langfuse.py
ocp-ai-agent/: .dockerignore  .gitignore  Dockerfile  agent.py  config.py  dashboard.py  emailer.py  nodes.py  (+15 more)
(+160 files in other folders)
