[project]
name = "langchain-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonpointer>=3.1.1",
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.3",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.1",
    "python-dotenv>=1.2.2",
]
