[project]
name = "langchain-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "jsonpointer>=3.1.1",
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.3",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.1",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.12.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "tiktoken>=0.13.0",
]
